# osqp_sqp

./: CMakeLists.txt  README.md  package.xml
include/osqp_sqp/: constraint.h  constraint_set.h  cost.h  osqp_sqp.h  solver.h  utils.h
src/: osqp_sqp.cpp  sample1.cpp  sample2.cpp
