<?xml version="1.0"?>
<package format="2">
  <name>osqp_sqp</name>
  <version>0.0.0</version>
  <description>The osqp_sqp package</description>

  <maintainer email="sugihara@jsk.imi.i.u-tokyo.ac.jp">Kazuki Sugihara</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>osqp</build_depend>
  <build_depend>osqp-eigen</build_depend>
  <build_export_depend>osqp</build_export_depend>
  <build_export_depend>osqp-eigen</build_export_depend>
  <exec_depend>osqp</exec_depend>
  <exec_depend>osqp-eigen</exec_depend>

</package>
